--- a/puert-2-rico.Rmd
+++ b/puert-2-rico.Rmd
@@ -31,11 +31,11 @@ columns_vector <- c("Sample_ID", "Sample_Date", "NO3-N", "K") #vector of columns
 
 #select columns form columns vector, create columns for month and year adn filter to rows that contain years 1988 to 1994. 
 bq1_tidy <- bq1 |> 
-  select(columns_vector) |> 
-  mutate(Year = year(Sample_Date), Month = month(Sample_Date)) |> 
-  filter(Year %in% c(seq(from = 1988, to = 1994)))
+  select(columns_vector) |>           #creating a subset of only columns that we are interested in (from vector above)
+  mutate(Year = year(Sample_Date), Month = month(Sample_Date)) |>  #adding month and year columns (lubridate)
+  filter(Year %in% c(seq(from = 1988, to = 1994)))        #subsetting for only rows in the time frame of interest
 
-bq2_tidy <- bq2 |> 
+bq2_tidy <- bq2 |>                        #repeating this sequence for the other three watershed dataframes
   select(columns_vector) |> 
   mutate(Year = year(Sample_Date), Month = month(Sample_Date)) |> 
   filter(Year %in% c(seq(from = 1988, to = 1994)))
@@ -51,20 +51,20 @@ prm_tidy <- prm |>
   filter(Year %in% c(seq(from = 1988, to = 1994)))
 
 #Combine four data sets into one data frame. 
-combined_data <- bind_rows(bq1_tidy, bq2_tidy, bq3_tidy, prm_tidy)
+combined_data <- bind_rows(bq1_tidy, bq2_tidy, bq3_tidy, prm_tidy)   #binding the rows together to make a combined data                                                                        frame using bind_rows()
 
 ```
 
 ```{r}
 #Create one column of month and year in date format so that nitrogen concentration can be summarized by month and year.
-combined_data_mean_N <- combined_data |> 
-  mutate(Month_Year = paste(month(Sample_Date), year(Sample_Date))) |> 
-  mutate(Month_Year = my(Month_Year)) |> 
-  group_by(Month_Year, Sample_ID) |> 
-  summarize(Monthly_Mean = mean(`NO3-N`, na.rm = TRUE))
+combined_data_mean_N <- combined_data |>   #creating a new column with unique year-month combinations
+  mutate(Month_Year = paste(month(Sample_Date), year(Sample_Date))) |>  #pasting year and month together (class:character)
+  mutate(Month_Year = my(Month_Year)) |>   #using lubridate again to go back to date format in new column
+  group_by(Month_Year, Sample_ID) |>       #group_by() into summarize() to get monthlly averages (to graph later)
+  summarize(Monthly_Mean = mean(`NO3-N`, na.rm = TRUE))   #avoiding gaps by removing NA values 
 
-#Monthly mean for postassium. 
-combined_data_mean_K <- combined_data |> 
+#Monthly mean for postassium. (same workflow as above)
+combined_data_mean_K <- combined_data |>    
   mutate(Month_Year = paste(month(Sample_Date), year(Sample_Date))) |> 
   mutate(Month_Year = my(Month_Year)) |> 
   group_by(Month_Year, Sample_ID) |> 
